[gd_scene load_steps=15 format=3 uid="uid://b4cvm5m8xxmg7"]

[ext_resource type="Script" path="res://player/statemachine/Statemachine.gd" id="2_b1cmp"]
[ext_resource type="Script" path="res://player/statemachine/idle.gd" id="3_v2k6h"]
[ext_resource type="Script" path="res://player/statemachine/Wall.gd" id="4_lhn0b"]
[ext_resource type="Script" path="res://player/statemachine/walk.gd" id="4_w04es"]
[ext_resource type="Script" path="res://player/statemachine/fall.gd" id="5_fe2cr"]
[ext_resource type="Script" path="res://player/statemachine/dash.gd" id="6_frlrf"]
[ext_resource type="Script" path="res://player/StateName.gd" id="7_1iq7l"]
[ext_resource type="Script" path="res://player/statemachine/Slide.gd" id="8_8np4d"]
[ext_resource type="Script" path="res://player/statemachine/Attack.gd" id="8_d2061"]
[ext_resource type="Script" path="res://player/Crouch.gd" id="9_5vpfc"]
[ext_resource type="PackedScene" uid="uid://byvoeqv3gdr4y" path="res://PlayerAnimation.tscn" id="9_mi5fs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6s73"]
size = Vector2(20, 38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p2iv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sg4bb"]
size = Vector2(32, 36)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Statemachine" type="Node" parent="."]
script = ExtResource("2_b1cmp")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Statemachine"]
script = ExtResource("3_v2k6h")

[node name="Wall" type="Node" parent="Statemachine"]
script = ExtResource("4_lhn0b")

[node name="Walk" type="Node" parent="Statemachine"]
script = ExtResource("4_w04es")

[node name="Fall" type="Node" parent="Statemachine"]
script = ExtResource("5_fe2cr")

[node name="Dash" type="Node" parent="Statemachine"]
script = ExtResource("6_frlrf")

[node name="Slide" type="Node" parent="Statemachine"]
script = ExtResource("8_8np4d")

[node name="Attack" type="Node" parent="Statemachine"]
script = ExtResource("8_d2061")

[node name="Crouch" type="Node" parent="Statemachine"]
script = ExtResource("9_5vpfc")

[node name="StateName" type="Label" parent="."]
offset_left = -25.0
offset_top = -39.0
offset_right = 26.0
offset_bottom = -13.0
text = "HELLO"
script = ExtResource("7_1iq7l")

[node name="PlayerAnimation" parent="." instance=ExtResource("9_mi5fs")]
position = Vector2(2.08165e-12, 20)

[node name="StandCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 1)
shape = SubResource("RectangleShape2D_v6s73")

[node name="SlideCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 10)
shape = SubResource("RectangleShape2D_8p2iv")

[node name="AttackShape" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 40

[node name="AttackCollider" type="CollisionShape2D" parent="AttackShape"]
position = Vector2(28, 1)
shape = SubResource("RectangleShape2D_sg4bb")

[node name="WallDetector" type="Node2D" parent="."]

[node name="Top" type="RayCast2D" parent="WallDetector"]
position = Vector2(2.08165e-12, -8)
rotation = -1.5708
target_position = Vector2(2.08165e-12, 12)

[node name="Bottom" type="RayCast2D" parent="WallDetector"]
position = Vector2(2.08165e-12, 10)
rotation = -1.5708
target_position = Vector2(2.08165e-12, 12)

[node name="CrouchStandUpDetector" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="CrouchStandUpDetector"]
position = Vector2(-5, 2.08165e-12)
rotation = 3.14159
target_position = Vector2(2.08165e-12, 18)

[node name="Right" type="RayCast2D" parent="CrouchStandUpDetector"]
position = Vector2(5, 2.08165e-12)
rotation = 3.14159
target_position = Vector2(2.08165e-12, 18)

[connection signal="transitioned" from="Statemachine" to="StateName" method="_on_statemachine_transitioned"]
[connection signal="transitioned" from="Statemachine" to="PlayerAnimation" method="_on_statemachine_transitioned"]
[connection signal="attack_state_change" from="PlayerAnimation" to="Statemachine" method="_on_player_animation_attack_state_change"]
[connection signal="height_change" from="PlayerAnimation" to="Statemachine" method="_on_player_animation_height_change"]
